now slight improvements with arrays for allowed origins